# nexusmods_web_api

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: error.rs  lib.rs  request.rs
src/parse/: mod.rs  parse.rs  selector.rs
src/test/: game_list.rs  mod.rs  mod_info.rs  mod_list.rs  request.rs
src/url_gen/: game_list.rs  mod.rs  mod_info.rs  mod_list.rs  url_args.rs
