[package]
name = "nexusmods_web_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.22", features = ["json"] }
scraper = "0.18.1"
tokio = { version = "1.34.0", features = ["rt", "rt-multi-thread", "macros"] }
chrono = "0.4.31"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0.50"
